tests/fixtures/invalid/str_bitor_dict.py
# Cannot bitwise OR Str and Dict[str, int]
x: str = "hello" | {"a": 1}
